--- a/index.html
+++ b/index.html
@@ -13,7 +13,5 @@
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
-  <body>
-    <span class="badge badge--secondary badge--small">10% Off</span>
-  </body>
+  <body></body>
 </html>
