--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <span class="icon-container">
+      <svg class="icon">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
+  </body>
 </html>
