--- a/index.html
+++ b/index.html
@@ -13,5 +13,25 @@
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius rerum in
+        iure minus dolore mollitia dolorum, illo ab totam impedit.
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <svg class="icon icon--primary quote__line">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Erez Zarini</h3>
+            <p class="quote__organization">IBM Israel</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
+  </body>
 </html>
