--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -71,6 +70,7 @@
       </header>
       <div class="input-group">
         <input
+          aria-label="Solution"
           type="text"
           class="input"
           placeholder="Enter Solution Name here..."
